# OpenInCut

./: .gitignore  Cargo.toml  PLAN.md  README-ar.md  README-fa.md  README-ru.md  README-zh.md  README.md  index.html  package-lock.json  package.json  preview.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  hello.yml  release.yml  windows.yml
crates/ue-ai/: Cargo.toml
crates/ue-ai/src/: emotion.rs  lib.rs  silence.rs
crates/ue-ai/tests/: silence_tests.rs
crates/ue-audio/: Cargo.toml
crates/ue-audio/src/: items.rs  lib.rs  mixer.rs  player.rs  stretch.rs  wav.rs
crates/ue-audio/tests/: audio_tests.rs
crates/ue-core/: Cargo.toml
crates/ue-core/src/: action.rs  error.rs  history.rs  keyframe.rs  lib.rs  model.rs  ops.rs  store.rs  time.rs  validate.rs
crates/ue-core/tests/: store_tests.rs
crates/ue-export/: Cargo.toml
crates/ue-export/src/: ass.rs  avatar_gen.rs  edl.rs  graph.rs  lib.rs  preview.rs  range.rs
crates/ue-export/tests/: ass_probe.rs  export_tests.rs
crates/ue-media/src/: denoise.rs  frame.rs  hashing.rs  lib.rs  probe.rs  proxy.rs  stream.rs  (+1 more)
crates/ue-render/: Cargo.toml
crates/ue-text/: Cargo.toml
crates/ue-text/src/: lib.rs
crates/ue-text/tests/: emoji.rs
crates/ue-whisper/: Cargo.toml
crates/ue-whisper/src/: lib.rs
crates/ue-whisper/tests/: progress_and_cancel.rs  whisper_tests.rs
docs/: MCP.md
scripts/: debug-preview.mjs  screenshot.mjs  verify-compositor.mjs  verify-preview-parity.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/tests/: mcp_tests.rs
src/components/: App.tsx  AvatarDialog.tsx  ExportDialog.tsx  Header.tsx  Inspector.tsx  McpChat.tsx  McpSettings.tsx  MediaPool.tsx  Preview.tsx  SettingsPanel.tsx  StatusBar.tsx  Timeline.tsx  TranscriptPanel.tsx
src/engine/: client.ts  compositor.ts  mock.ts  tauri.ts  types.ts  video-cache.ts
src/lib/: media.ts  time.ts
src/state/: store.ts  visuals.ts
(+11 files in other folders)
